--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/joserobleda/daily",
   "dependencies": {
     "express": "^4.10.4",
+    "shortid": "^2.2.1",
     "slug": "^0.8.0"
   }
 }
